<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:text="↩"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editBookText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="Edit The Book"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/genreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/genre" />

    <EditText
        android:id="@+id/authorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_background"
        android:padding="14dp"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_background"
        android:padding="14dp"
        android:text="Delete"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>